--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@spotify/web-api-ts-sdk": "^1.1.2",
     "elysia": "latest"
   },
   "devDependencies": {
