--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@spotify/web-api-ts-sdk": "^1.1.2",
-    "elysia": "latest"
+    "elysia": "latest",
+    "elysia-autoroutes": "^0.4.0"
   },
   "devDependencies": {
     "bun-types": "latest"
